bad/for_class_over_string.example_compiler_output
ERROR
[1mbad/for_class_over_string.lat:5:14: [1;31merror: [0;1mfor cannot iterate over value of non-array type `string`[m
	for (Y x : "") {}
	            [1;32m^[m
